tests/typechecker/fail/031-for.hyg
let mutable i: int = 0;
for (();  10; i <- i + 1)
    print(i)